// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorList Container should render Default 1`] = `
<DocumentFragment>
  <article
    class="css-2otupp-ArticleListWrapper ei1ca8h0"
  >
    <div
      class="css-hw4wfz-TeaserGridBlockWrapper e1xnbuxv0"
    >
      <article
        class="css-8p11sj-TeaserWrapper e18of27r11"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="https://example.com"
        >
          <div
            class="css-1f245dr-TeaserContentWrapper e18of27r8"
          >
            <div
              class="css-1xekyz3-TeaserImageWrapper e18of27r9"
            >
              <img
                alt="DSC07717"
                class="css-j9zgar-ImageWrapper-Teaser e1shv2yg0"
                loading="lazy"
                srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="css-liekhy-TeaserPreTitleNoContent e18of27r4"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 css-qb7o5k-TeaserTitle-MuiTypography-root e18of27r7"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-17cdwkk-TeaserLead-MuiTypography-root e18of27r6"
            >
              lead
            </p>
            <div
              class="css-sibxk9-TeaserMetadata e18of27r1"
            >
              <span
                class="css-bndfqf-Authors e18of27r5"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="css-bsjge5-TeaserTime e18of27r0"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="css-z4j0q-TeaserWrapper e18of27r11"
        x="4"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="https://example.com"
        >
          <div
            class="css-1f245dr-TeaserContentWrapper e18of27r8"
          >
            <div
              class="css-1xekyz3-TeaserImageWrapper e18of27r9"
            >
              <img
                alt="DSC07717"
                class="css-j9zgar-ImageWrapper-Teaser e1shv2yg0"
                loading="lazy"
                srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="css-liekhy-TeaserPreTitleNoContent e18of27r4"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 css-qb7o5k-TeaserTitle-MuiTypography-root e18of27r7"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-17cdwkk-TeaserLead-MuiTypography-root e18of27r6"
            >
              lead
            </p>
            <div
              class="css-sibxk9-TeaserMetadata e18of27r1"
            >
              <span
                class="css-bndfqf-Authors e18of27r5"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="css-bsjge5-TeaserTime e18of27r0"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="css-wylm69-TeaserWrapper e18of27r11"
        x="8"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="https://example.com"
        >
          <div
            class="css-1f245dr-TeaserContentWrapper e18of27r8"
          >
            <div
              class="css-1xekyz3-TeaserImageWrapper e18of27r9"
            >
              <img
                alt="DSC07717"
                class="css-j9zgar-ImageWrapper-Teaser e1shv2yg0"
                loading="lazy"
                srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="css-liekhy-TeaserPreTitleNoContent e18of27r4"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 css-qb7o5k-TeaserTitle-MuiTypography-root e18of27r7"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-17cdwkk-TeaserLead-MuiTypography-root e18of27r6"
            >
              lead
            </p>
            <div
              class="css-sibxk9-TeaserMetadata e18of27r1"
            >
              <span
                class="css-bndfqf-Authors e18of27r5"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="css-bsjge5-TeaserTime e18of27r0"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
    </div>
  </article>
</DocumentFragment>
`;

exports[`AuthorList Container should render WithClassName 1`] = `
<DocumentFragment>
  <article
    class="extra-classname css-2otupp-ArticleListWrapper ei1ca8h0"
  >
    <div
      class="css-hw4wfz-TeaserGridBlockWrapper e1xnbuxv0"
    >
      <article
        class="css-8p11sj-TeaserWrapper e18of27r11"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="https://example.com"
        >
          <div
            class="css-1f245dr-TeaserContentWrapper e18of27r8"
          >
            <div
              class="css-1xekyz3-TeaserImageWrapper e18of27r9"
            >
              <img
                alt="DSC07717"
                class="css-j9zgar-ImageWrapper-Teaser e1shv2yg0"
                loading="lazy"
                srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="css-liekhy-TeaserPreTitleNoContent e18of27r4"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 css-qb7o5k-TeaserTitle-MuiTypography-root e18of27r7"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-17cdwkk-TeaserLead-MuiTypography-root e18of27r6"
            >
              lead
            </p>
            <div
              class="css-sibxk9-TeaserMetadata e18of27r1"
            >
              <span
                class="css-bndfqf-Authors e18of27r5"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="css-bsjge5-TeaserTime e18of27r0"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="css-z4j0q-TeaserWrapper e18of27r11"
        x="4"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="https://example.com"
        >
          <div
            class="css-1f245dr-TeaserContentWrapper e18of27r8"
          >
            <div
              class="css-1xekyz3-TeaserImageWrapper e18of27r9"
            >
              <img
                alt="DSC07717"
                class="css-j9zgar-ImageWrapper-Teaser e1shv2yg0"
                loading="lazy"
                srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="css-liekhy-TeaserPreTitleNoContent e18of27r4"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 css-qb7o5k-TeaserTitle-MuiTypography-root e18of27r7"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-17cdwkk-TeaserLead-MuiTypography-root e18of27r6"
            >
              lead
            </p>
            <div
              class="css-sibxk9-TeaserMetadata e18of27r1"
            >
              <span
                class="css-bndfqf-Authors e18of27r5"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="css-bsjge5-TeaserTime e18of27r0"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="css-wylm69-TeaserWrapper e18of27r11"
        x="8"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="https://example.com"
        >
          <div
            class="css-1f245dr-TeaserContentWrapper e18of27r8"
          >
            <div
              class="css-1xekyz3-TeaserImageWrapper e18of27r9"
            >
              <img
                alt="DSC07717"
                class="css-j9zgar-ImageWrapper-Teaser e1shv2yg0"
                loading="lazy"
                srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="css-liekhy-TeaserPreTitleNoContent e18of27r4"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 css-qb7o5k-TeaserTitle-MuiTypography-root e18of27r7"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-17cdwkk-TeaserLead-MuiTypography-root e18of27r6"
            >
              lead
            </p>
            <div
              class="css-sibxk9-TeaserMetadata e18of27r1"
            >
              <span
                class="css-bndfqf-Authors e18of27r5"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="css-bsjge5-TeaserTime e18of27r0"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
    </div>
  </article>
</DocumentFragment>
`;

exports[`AuthorList Container should render WithEmotion 1`] = `
<DocumentFragment>
  <article
    class="css-2otupp-ArticleListWrapper ei1ca8h0"
  >
    <div
      class="css-hw4wfz-TeaserGridBlockWrapper e1xnbuxv0"
    >
      <article
        class="css-8p11sj-TeaserWrapper e18of27r11"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="https://example.com"
        >
          <div
            class="css-1f245dr-TeaserContentWrapper e18of27r8"
          >
            <div
              class="css-1xekyz3-TeaserImageWrapper e18of27r9"
            >
              <img
                alt="DSC07717"
                class="css-j9zgar-ImageWrapper-Teaser e1shv2yg0"
                loading="lazy"
                srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="css-liekhy-TeaserPreTitleNoContent e18of27r4"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 css-qb7o5k-TeaserTitle-MuiTypography-root e18of27r7"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-17cdwkk-TeaserLead-MuiTypography-root e18of27r6"
            >
              lead
            </p>
            <div
              class="css-sibxk9-TeaserMetadata e18of27r1"
            >
              <span
                class="css-bndfqf-Authors e18of27r5"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="css-bsjge5-TeaserTime e18of27r0"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="css-z4j0q-TeaserWrapper e18of27r11"
        x="4"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="https://example.com"
        >
          <div
            class="css-1f245dr-TeaserContentWrapper e18of27r8"
          >
            <div
              class="css-1xekyz3-TeaserImageWrapper e18of27r9"
            >
              <img
                alt="DSC07717"
                class="css-j9zgar-ImageWrapper-Teaser e1shv2yg0"
                loading="lazy"
                srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="css-liekhy-TeaserPreTitleNoContent e18of27r4"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 css-qb7o5k-TeaserTitle-MuiTypography-root e18of27r7"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-17cdwkk-TeaserLead-MuiTypography-root e18of27r6"
            >
              lead
            </p>
            <div
              class="css-sibxk9-TeaserMetadata e18of27r1"
            >
              <span
                class="css-bndfqf-Authors e18of27r5"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="css-bsjge5-TeaserTime e18of27r0"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="css-wylm69-TeaserWrapper e18of27r11"
        x="8"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="https://example.com"
        >
          <div
            class="css-1f245dr-TeaserContentWrapper e18of27r8"
          >
            <div
              class="css-1xekyz3-TeaserImageWrapper e18of27r9"
            >
              <img
                alt="DSC07717"
                class="css-j9zgar-ImageWrapper-Teaser e1shv2yg0"
                loading="lazy"
                srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="css-liekhy-TeaserPreTitleNoContent e18of27r4"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 css-qb7o5k-TeaserTitle-MuiTypography-root e18of27r7"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-17cdwkk-TeaserLead-MuiTypography-root e18of27r6"
            >
              lead
            </p>
            <div
              class="css-sibxk9-TeaserMetadata e18of27r1"
            >
              <span
                class="css-bndfqf-Authors e18of27r5"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="css-bsjge5-TeaserTime e18of27r0"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
    </div>
  </article>
</DocumentFragment>
`;

exports[`AuthorList Container should render WithFilter 1`] = `
<DocumentFragment>
  <article
    class="css-2otupp-ArticleListWrapper ei1ca8h0"
  >
    <div
      class="css-hw4wfz-TeaserGridBlockWrapper e1xnbuxv0"
    >
      <article
        class="css-8p11sj-TeaserWrapper e18of27r11"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="https://example.com"
        >
          <div
            class="css-1f245dr-TeaserContentWrapper e18of27r8"
          >
            <div
              class="css-1xekyz3-TeaserImageWrapper e18of27r9"
            >
              <img
                alt="DSC07717"
                class="css-j9zgar-ImageWrapper-Teaser e1shv2yg0"
                loading="lazy"
                srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="css-liekhy-TeaserPreTitleNoContent e18of27r4"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 css-qb7o5k-TeaserTitle-MuiTypography-root e18of27r7"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-17cdwkk-TeaserLead-MuiTypography-root e18of27r6"
            >
              lead
            </p>
            <div
              class="css-sibxk9-TeaserMetadata e18of27r1"
            >
              <span
                class="css-bndfqf-Authors e18of27r5"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="css-bsjge5-TeaserTime e18of27r0"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="css-z4j0q-TeaserWrapper e18of27r11"
        x="4"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="https://example.com"
        >
          <div
            class="css-1f245dr-TeaserContentWrapper e18of27r8"
          >
            <div
              class="css-1xekyz3-TeaserImageWrapper e18of27r9"
            >
              <img
                alt="DSC07717"
                class="css-j9zgar-ImageWrapper-Teaser e1shv2yg0"
                loading="lazy"
                srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="css-liekhy-TeaserPreTitleNoContent e18of27r4"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 css-qb7o5k-TeaserTitle-MuiTypography-root e18of27r7"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-17cdwkk-TeaserLead-MuiTypography-root e18of27r6"
            >
              lead
            </p>
            <div
              class="css-sibxk9-TeaserMetadata e18of27r1"
            >
              <span
                class="css-bndfqf-Authors e18of27r5"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="css-bsjge5-TeaserTime e18of27r0"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
    </div>
  </article>
</DocumentFragment>
`;
